fix issue #109 in which the other elements of page overlapped the navbar in about page

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -35,16 +35,6 @@ body{
     width: 70%;
     }
 } */
-.navbar{
-  margin-bottom: 5%;
-  z-index: 1;
-}
-nav{
-  background-color: transparent !important;
-  box-shadow: none;
-  border: none;
-  padding: 1vw;
-}
 
 .intro_message{
   height: 90%;
