--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -24,12 +24,20 @@ header {
   padding: 3%;
 }
 
+.navbar{
+  margin-bottom: 5%;
+}
+
 nav {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   box-shadow: none !important;
+  background-color: rgba(89, 164, 196, .8) !important;
+  border: none;
+  padding: 0 1vw 0 1vw;
+  z-index: 99;
 }
 
 .slide-nav {
